--- a/index.html
+++ b/index.html
@@ -15,20 +15,20 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            flex-direction: column; /* İçerikleri dikeyde hizalar */
             overflow: hidden;
             position: relative;
         }
 
-        /* SAĞ ÜST TARİH (GECİKMESİZ) */
+        /* GECİKMESİZ TARİH (SAĞ ÜST) */
         #datetime {
             position: absolute;
-            top: 20px;
-            right: 25px;
+            top: 15px;
+            right: 20px;
             text-align: right;
             font-size: 14px;
             letter-spacing: 2px;
             font-weight: bold;
-            z-index: 100;
         }
 
         /* SHINE (PARLAMA) EFEKTİ */
@@ -46,20 +46,18 @@
             to { background-position: 200% center; }
         }
 
-        /* ÜST BAŞLIK */
+        /* ÜST BAŞLIK (YAKINLAŞTIRILDI) */
         .header-title {
-            position: absolute;
-            top: 10%;
-            font-size: clamp(40px, 8vw, 60px); /* Ekran boyutuna göre ölçeklenir */
-            letter-spacing: 10px;
+            font-size: 55px;
+            letter-spacing: 8px;
+            margin-bottom: 20px; /* Orta kutuyla arasını kapattık */
         }
 
-        /* ALT BAŞLIK */
+        /* ALT BAŞLIK (YAKINLAŞTIRILDI) */
         .footer-title {
-            position: absolute;
-            bottom: 10%;
-            font-size: clamp(50px, 10vw, 70px);
-            letter-spacing: 15px;
+            font-size: 65px;
+            letter-spacing: 12px;
+            margin-top: 20px; /* Orta kutuyla arasını kapattık */
         }
 
         /* OPEN BUTONU */
@@ -67,13 +65,12 @@
             background: transparent;
             color: #ff0000;
             border: 1px solid #ff0000;
-            padding: 15px 50px;
+            padding: 12px 45px;
             cursor: pointer;
             font-size: 18px;
             font-family: inherit;
             letter-spacing: 5px;
             transition: 0.3s;
-            z-index: 10;
         }
         #open-btn:hover {
             background: #ff0000;
@@ -87,36 +84,35 @@
             flex-direction: column;
             align-items: center;
             border: 1px solid #ff0000;
-            padding: 30px;
-            width: 320px;
+            padding: 25px;
+            width: 300px;
             background: rgba(0, 0, 0, 0.95);
             box-shadow: 0 0 15px rgba(255, 0, 0, 0.3);
-            animation: fadeIn 0.4s ease-out;
-            z-index: 20;
+            animation: fadeIn 0.3s ease-out;
         }
 
         @keyframes fadeIn {
-            from { opacity: 0; transform: scale(0.9); }
+            from { opacity: 0; transform: scale(0.95); }
             to { opacity: 1; transform: scale(1); }
         }
 
-        .inner-title { font-size: 22px; letter-spacing: 4px; margin-bottom: 20px; }
+        .inner-title { font-size: 20px; letter-spacing: 4px; margin-bottom: 15px; }
 
         .links {
             display: flex;
             flex-direction: column;
-            gap: 12px;
+            gap: 10px;
             width: 100%;
-            margin-bottom: 20px;
+            margin-bottom: 15px;
         }
 
         .btn {
-            border: 1px solid #330000;
+            border: 1px solid #440000;
             color: #ff0000;
             padding: 10px;
             text-decoration: none;
             text-align: center;
-            font-size: 14px;
+            font-size: 13px;
             letter-spacing: 2px;
             transition: 0.2s;
         }
@@ -125,7 +121,7 @@
             background: rgba(255, 0, 0, 0.1);
         }
 
-        .tagline { font-size: 10px; letter-spacing: 5px; opacity: 0.8; }
+        .tagline { font-size: 10px; letter-spacing: 4px; opacity: 0.8; }
 
     </style>
 </head>
@@ -137,7 +133,6 @@
     </div>
 
     <div class="header-title shine-text">ANKEB7T</div>
-    <div class="footer-title shine-text">ZİRVE</div>
 
     <button id="open-btn" onclick="openSite()">[ OPEN ]</button>
 
@@ -146,21 +141,21 @@
         
         <div class="links">
             <a href="https://t.me/allesfurdie" class="btn" target="_blank">TELEGRAM</a>
-            <a href="https://instagram.com/ankeb7t27" class="btn" target="_blank">INSTAGRAM</a>
+            <a href="https://instagram.com/ankeb7t01" class="btn" target="_blank">INSTAGRAM</a>
             <a href="https://wa.me/998998780248" class="btn" target="_blank">WHATSAPP</a>
         </div>
 
         <div class="tagline shine-text">ALLES FUR DIE</div>
     </div>
 
+    <div class="footer-title shine-text">ZİRVE</div>
+
     <script>
-        // Butona basınca panel gelsin
         function openSite() {
             document.getElementById('open-btn').style.display = 'none';
             document.getElementById('main-content').style.display = 'flex';
         }
 
-        // Tarih/Saat (Sıfır gecikme için anında çağrı)
         function updateClock() {
             const now = new Date();
             const d = String(now.getDate()).padStart(2, '0');
@@ -174,7 +169,6 @@
             document.getElementById('time').textContent = h + ":" + min + ":" + sec;
         }
 
-        // Başlat
         updateClock();
         setInterval(updateClock, 1000);
     </script>
