--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             position: relative;
         }
 
-        /* SAĞ ÜST TARİH */
+        /* SAĞ ÜST TARİH (HER ZAMAN NET) */
         #datetime {
             position: absolute;
             top: 20px;
@@ -27,11 +27,11 @@
             text-align: right;
             font-size: 16px;
             letter-spacing: 2px;
-            z-index: 1000;
+            z-index: 2000;
             font-weight: bold;
         }
 
-        /* SHINE EFEKTİ (Yazıların panel içinden parlamasını sağlar) */
+        /* SHINE EFEKTİ */
         .shine-text {
             background: linear-gradient(to right, #330000 20%, #ff0000 40%, #ffffff 50%, #ff0000 60%, #330000 80%);
             background-size: 200% auto;
@@ -46,7 +46,7 @@
             to { background-position: 200% center; }
         }
 
-        /* ARKADAKİ SABİT YAZILAR (HİÇ KAPANMAZ) */
+        /* DEV YAZILAR (Z-INDEX: 100 YAPTIM Kİ KUTUNUN ÜSTÜNE BİNSİN) */
         .background-titles {
             position: absolute;
             width: 100%;
@@ -55,13 +55,14 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            z-index: 1; /* En alt katman */
+            z-index: 100; /* Kutunun üst katmanına aldım */
+            pointer-events: none; /* Yazılara tıklayınca arkadaki butonlara engel olmasın */
         }
 
         .bg-header {
             font-size: clamp(60px, 15vw, 120px);
             letter-spacing: 15px;
-            margin-bottom: 220px; /* Panel tam araya otursun diye */
+            margin-bottom: 220px; 
         }
 
         .bg-footer {
@@ -69,17 +70,26 @@
             letter-spacing: 25px;
         }
 
-        /* ÖN PLANDAKİ ETKİLEŞİM */
-        .foreground-container {
-            position: relative;
-            z-index: 10; /* Yazıların üstüne biner */
-            display: flex;
-            justify-content: center;
+        /* SOSYAL MEDYA KUTUSU (NET SİYAH) */
+        #main-content {
+            display: none;
+            flex-direction: column;
             align-items: center;
-            width: 100%;
-            height: 100%;
+            border: 1px solid #ff0000;
+            padding: 50px 40px;
+            width: 420px;
+            background: #000; /* Cam mam yok, düz siyah */
+            box-shadow: 0 0 30px rgba(255, 0, 0, 0.4);
+            z-index: 50; /* Yazıların (100) altında kalacak */
+            animation: fadeIn 0.3s ease;
         }
 
+        @keyframes fadeIn {
+            from { opacity: 0; transform: scale(0.95); }
+            to { opacity: 1; transform: scale(1); }
+        }
+
+        /* GİRİŞ BUTONU */
         #open-btn {
             background: transparent;
             color: #ff0000;
@@ -89,29 +99,10 @@
             font-size: 20px;
             font-family: inherit;
             letter-spacing: 10px;
-            transition: 0.4s;
+            z-index: 150; /* En üstte ki basılabilsin */
+            transition: 0.3s;
         }
         #open-btn:hover { background: #ff0000; color: #000; box-shadow: 0 0 30px #ff0000; }
-
-        /* SEŞFAF GEÇİŞLİ BÜYÜK KUTU */
-        #main-content {
-            display: none;
-            flex-direction: column;
-            align-items: center;
-            border: 1px solid #ff0000;
-            padding: 50px 40px;
-            width: 420px;
-            /* Siyahlığı koruyan ama arkadaki parlamayı geçiren ayar: */
-            background: rgba(0, 0, 0, 0.4); 
-            backdrop-filter: blur(2px); /* Yazıları net tutmak için bluru çok az tuttum */
-            box-shadow: 0 0 40px rgba(255, 0, 0, 0.2);
-            animation: boxScale 0.4s ease-out;
-        }
-
-        @keyframes boxScale {
-            from { opacity: 0; transform: scale(0.9); }
-            to { opacity: 1; transform: scale(1); }
-        }
 
         .inner-title { font-size: 26px; letter-spacing: 5px; margin-bottom: 30px; }
 
@@ -131,11 +122,11 @@
             text-align: center;
             font-size: 16px;
             letter-spacing: 3px;
-            transition: 0.3s;
-            background: rgba(0, 0, 0, 0.6);
+            transition: 0.2s;
+            z-index: 160; /* Linklere basılabilsin */
+            position: relative;
         }
         .btn:hover {
-            border-color: #ff0000;
             background: #ff0000;
             color: #000;
             box-shadow: 0 0 15px #ff0000;
@@ -157,20 +148,18 @@
         <div class="bg-footer shine-text">ZİRVE</div>
     </div>
 
-    <div class="foreground-container">
-        <button id="open-btn" onclick="openSite()">[ OPEN ]</button>
+    <button id="open-btn" onclick="openSite()">[ OPEN ]</button>
 
-        <div id="main-content">
-            <div class="inner-title shine-text">ANKEB7T</div>
-            
-            <div class="links">
-                <a href="https://t.me/allesfurdie" class="btn" target="_blank">TELEGRAM</a>
-                <a href="https://instagram.com/ankeb7t27" class="btn" target="_blank">INSTAGRAM</a>
-                <a href="https://wa.me/998998780248" class="btn" target="_blank">WHATSAPP</a>
-            </div>
-
-            <div class="tagline shine-text">ALLES FUR DIE</div>
+    <div id="main-content">
+        <div class="inner-title shine-text">ANKEB7T</div>
+        
+        <div class="links">
+            <a href="https://t.me/allesfurdie" class="btn" target="_blank">TELEGRAM</a>
+            <a href="https://instagram.com/ankeb7t27" class="btn" target="_blank">INSTAGRAM</a>
+            <a href="https://wa.me/998998780248" class="btn" target="_blank">WHATSAPP</a>
         </div>
+
+        <div class="tagline shine-text">ALLES FUR DIE</div>
     </div>
 
     <script>
