--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             position: relative;
         }
 
-        /* SAĞ ÜST TARİH (HER ZAMAN NET) */
+        /* GECİKMESİZ TARİH VE SAAT */
         #datetime {
             position: absolute;
             top: 20px;
@@ -27,11 +27,11 @@
             text-align: right;
             font-size: 16px;
             letter-spacing: 2px;
-            z-index: 2000;
+            z-index: 1000;
             font-weight: bold;
         }
 
-        /* SHINE EFEKTİ */
+        /* SHINE (PARLAMA) EFEKTİ */
         .shine-text {
             background: linear-gradient(to right, #330000 20%, #ff0000 40%, #ffffff 50%, #ff0000 60%, #330000 80%);
             background-size: 200% auto;
@@ -46,50 +46,42 @@
             to { background-position: 200% center; }
         }
 
-        /* DEV YAZILAR (Z-INDEX: 100 YAPTIM Kİ KUTUNUN ÜSTÜNE BİNSİN) */
+        /* ARKADAKİ SABİT YAZILAR (HİÇ KAPANMAZ) */
         .background-titles {
             position: absolute;
             width: 100%;
             height: 100%;
             display: flex;
             flex-direction: column;
-            justify-content: center;
+            justify-content: space-between;
             align-items: center;
-            z-index: 100; /* Kutunun üst katmanına aldım */
-            pointer-events: none; /* Yazılara tıklayınca arkadaki butonlara engel olmasın */
+            padding: 12vh 0; /* Yazıları uçlara çektik */
+            z-index: 1; /* En alt katman */
+            pointer-events: none;
         }
 
         .bg-header {
-            font-size: clamp(60px, 15vw, 120px);
-            letter-spacing: 15px;
-            margin-bottom: 220px; 
+            font-size: clamp(50px, 12vw, 100px);
+            letter-spacing: 12px;
         }
 
         .bg-footer {
-            font-size: clamp(70px, 18vw, 140px);
-            letter-spacing: 25px;
+            font-size: clamp(60px, 15vw, 120px);
+            letter-spacing: 20px;
         }
 
-        /* SOSYAL MEDYA KUTUSU (NET SİYAH) */
-        #main-content {
-            display: none;
-            flex-direction: column;
+        /* ÖN PLANDAKİ ETKİLEŞİM KATMANI */
+        .foreground-container {
+            position: relative;
+            z-index: 10;
+            display: flex;
+            justify-content: center;
             align-items: center;
-            border: 1px solid #ff0000;
-            padding: 50px 40px;
-            width: 420px;
-            background: #000; /* Cam mam yok, düz siyah */
-            box-shadow: 0 0 30px rgba(255, 0, 0, 0.4);
-            z-index: 50; /* Yazıların (100) altında kalacak */
-            animation: fadeIn 0.3s ease;
+            width: 100%;
+            height: 100%;
         }
 
-        @keyframes fadeIn {
-            from { opacity: 0; transform: scale(0.95); }
-            to { opacity: 1; transform: scale(1); }
-        }
-
-        /* GİRİŞ BUTONU */
+        /* [ OPEN ] BUTONU */
         #open-btn {
             background: transparent;
             color: #ff0000;
@@ -99,10 +91,33 @@
             font-size: 20px;
             font-family: inherit;
             letter-spacing: 10px;
-            z-index: 150; /* En üstte ki basılabilsin */
-            transition: 0.3s;
+            transition: 0.4s;
         }
-        #open-btn:hover { background: #ff0000; color: #000; box-shadow: 0 0 30px #ff0000; }
+        #open-btn:hover {
+            background: #ff0000;
+            color: #000;
+            box-shadow: 0 0 30px #ff0000;
+        }
+
+        /* SOSYAL MEDYA PANELİ (ŞEFFAF VE BÜYÜK) */
+        #main-content {
+            display: none;
+            flex-direction: column;
+            align-items: center;
+            border: 1px solid #ff0000;
+            padding: 50px 40px;
+            width: 420px;
+            /* Arkadaki yazıların gözükmesi için hafif şeffaflık */
+            background: rgba(0, 0, 0, 0.7); 
+            backdrop-filter: blur(2px);
+            box-shadow: 0 0 40px rgba(255, 0, 0, 0.4);
+            animation: boxScale 0.4s ease-out;
+        }
+
+        @keyframes boxScale {
+            from { opacity: 0; transform: scale(0.9); }
+            to { opacity: 1; transform: scale(1); }
+        }
 
         .inner-title { font-size: 26px; letter-spacing: 5px; margin-bottom: 30px; }
 
@@ -122,11 +137,11 @@
             text-align: center;
             font-size: 16px;
             letter-spacing: 3px;
-            transition: 0.2s;
-            z-index: 160; /* Linklere basılabilsin */
-            position: relative;
+            transition: 0.3s;
+            background: rgba(0, 0, 0, 0.5);
         }
         .btn:hover {
+            border-color: #ff0000;
             background: #ff0000;
             color: #000;
             box-shadow: 0 0 15px #ff0000;
@@ -148,18 +163,20 @@
         <div class="bg-footer shine-text">ZİRVE</div>
     </div>
 
-    <button id="open-btn" onclick="openSite()">[ OPEN ]</button>
+    <div class="foreground-container">
+        <button id="open-btn" onclick="openSite()">[ OPEN ]</button>
 
-    <div id="main-content">
-        <div class="inner-title shine-text">ANKEB7T</div>
-        
-        <div class="links">
-            <a href="https://t.me/allesfurdie" class="btn" target="_blank">TELEGRAM</a>
-            <a href="https://instagram.com/ankeb7t27" class="btn" target="_blank">INSTAGRAM</a>
-            <a href="https://wa.me/998998780248" class="btn" target="_blank">WHATSAPP</a>
+        <div id="main-content">
+            <div class="inner-title shine-text">ANKEB7T</div>
+            
+            <div class="links">
+                <a href="https://t.me/allesfurdie" class="btn" target="_blank">TELEGRAM</a>
+                <a href="https://instagram.com/ankeb7t27" class="btn" target="_blank">INSTAGRAM</a>
+                <a href="https://wa.me/998998780248" class="btn" target="_blank">WHATSAPP</a>
+            </div>
+
+            <div class="tagline shine-text">ALLES FUR DIE</div>
         </div>
-
-        <div class="tagline shine-text">ALLES FUR DIE</div>
     </div>
 
     <script>
@@ -181,6 +198,7 @@
             document.getElementById('time').textContent = h + ":" + min + ":" + sec;
         }
 
+        // Başlangıçta saati kur
         updateClock();
         setInterval(updateClock, 1000);
     </script>
