--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         /* SAĞ ÜST TARİH VE SAAT */
         #datetime {
             position: absolute;
-            top: 15px;
-            right: 20px;
+            top: 20px;
+            right: 25px;
             text-align: right;
             font-size: 14px;
             letter-spacing: 2px;
@@ -31,7 +31,7 @@
             font-weight: bold;
         }
 
-        /* PARLAMA EFEKTİ */
+        /* SHINE EFEKTİ */
         .shine-text {
             background: linear-gradient(to right, #330000 20%, #ff0000 40%, #ffffff 50%, #ff0000 60%, #330000 80%);
             background-size: 200% auto;
@@ -46,40 +46,40 @@
             to { background-position: 200% center; }
         }
 
-        /* YAZILAR: ANKEB7T EN ÜSTE, ZİRVE EN ALTA */
+        /* ESNEK YAZI KONUMLARI (Responsive) */
         .bg-header {
             position: absolute;
-            top: 5vh; /* Ekranın %5 yukarısı */
-            font-size: clamp(40px, 10vw, 90px);
-            letter-spacing: 15px;
+            top: 15%; /* Mobilde de tablette de sırıtmaz */
+            font-size: clamp(35px, 8vw, 80px);
+            letter-spacing: 10px;
             z-index: 5;
+            width: 100%;
+            text-align: center;
         }
 
         .bg-footer {
             position: absolute;
-            bottom: 5vh; /* Ekranın %5 aşağısı */
-            font-size: clamp(50px, 12vw, 110px);
-            letter-spacing: 20px;
+            bottom: 15%;
+            font-size: clamp(45px, 10vw, 100px);
+            letter-spacing: 15px;
             z-index: 5;
+            width: 100%;
+            text-align: center;
         }
 
-        /* SOSYAL MEDYA KUTUSU (TAM ORTADA VE KAPALI SİYAH) */
+        /* SOSYAL MEDYA KUTUSU (Her ekrana göre genişlik ayarlı) */
         #main-content {
             display: none;
             flex-direction: column;
             align-items: center;
             border: 1px solid #ff0000;
-            padding: 40px;
-            width: 380px;
-            background: #000; /* İçinde yazı gözükmez, tam siyah */
-            box-shadow: 0 0 30px rgba(255, 0, 0, 0.5);
+            padding: 40px 20px;
+            width: 90%; /* Mobilde ekranı kaplar */
+            max-width: 400px; /* Tablette/PC'de sabitlenir */
+            background: #000;
+            box-shadow: 0 0 30px rgba(255, 0, 0, 0.4);
             z-index: 100;
-            animation: fadeIn 0.3s ease-out;
-        }
-
-        @keyframes fadeIn {
-            from { opacity: 0; transform: scale(0.9); }
-            to { opacity: 1; transform: scale(1); }
+            animation: fadeIn 0.3s ease;
         }
 
         /* OPEN BUTONU */
@@ -90,11 +90,15 @@
             padding: 15px 50px;
             cursor: pointer;
             font-size: 18px;
-            letter-spacing: 10px;
+            letter-spacing: 8px;
             z-index: 100;
             transition: 0.3s;
         }
-        #open-btn:hover { background: #ff0000; color: #000; box-shadow: 0 0 20px #ff0000; }
+
+        @keyframes fadeIn {
+            from { opacity: 0; transform: scale(0.95); }
+            to { opacity: 1; transform: scale(1); }
+        }
 
         .inner-title { font-size: 22px; letter-spacing: 4px; margin-bottom: 25px; }
 
@@ -118,8 +122,14 @@
         }
         .btn:hover { background: #ff0000; color: #000; }
 
-        .tagline { font-size: 10px; letter-spacing: 5px; opacity: 0.8; }
+        .tagline { font-size: 10px; letter-spacing: 6px; opacity: 0.8; }
 
+        /* TELEFONLAR İÇİN ÖZEL DOKUNUŞ */
+        @media (max-width: 600px) {
+            .bg-header { top: 20%; }
+            .bg-footer { bottom: 20%; }
+            #datetime { font-size: 12px; top: 10px; right: 15px; }
+        }
     </style>
 </head>
 <body>
